# bCNC-QT

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEV-GUIDE.md  MANIFEST.in  README.md  USER-GUIDE.md  bCNC-QT.spec  pyproject.toml
.github/workflows/: release.yml
bCNC/: CNC.py  Camera.py  CommandDispatcher.py  EventBus.py  FileManager.py  Helpers.py  MachineState.py  PathGeometry.py  Pendant.py  SceneGraph.py  Sender.py  ToolsPage.py  ViewTransform.py  __main__.py  tools_base.py  utils_core.py
bCNC/controllers/: _GenericController.py
bCNC/plugins/: LaserCut.py  Random.py  driller.py  endmilloffset.py  simpleRotate.py  simpleTranslate.py  spiral.py  stlSlicer.py  tile.py  trochoidal_3D.py
bCNC/qt/: __init__.py  app.py  autolevel_panel.py  camera_overlay.py  camera_tab.py  canvas_widget.py  control_panel.py  editor_model.py  editor_panel.py  main_window.py  orient_overlay.py  orient_tab.py  probe_panel.py  serial_monitor.py  signals.py  terminal_panel.py  tools_manager.py  tools_panel.py
tests/: test_qt_control_panel.py
